# AuditX

./: .env.example  .gitignore  AuditX_工程化扩展设计方案.md  README.md  WORKLOG.md  package-lock.json  pyproject.toml  启动AuditX桌面应用.bat  快速启动AuditX桌面应用.bat  方案.txt  注意点.md
backend/auditx/: main.py
docs/: audit_flow_phase_1a.md  code_review_guide.md
docs/acceptance/: day1-data-contracts-acceptance.md  day1-day1_5-completion-summary.md  day2-agent-routing-acceptance.md  day3-llm-mock-candidate-acceptance.md  day4-scoring-acceptance.md  day5-day6-single-resume-mvp-acceptance.md  day5-rule-tools-acceptance.md  day5-single-resume-mvp.md  day6-mvp-closure.md  mvp-manual-acceptance-guide.md  ocr-pdf-artifact-chain.md  openai-job-template-generation-acceptance.md
docs/handoff/: day2-orchestrator-context-handoff.md
docs/plans/: 12_day_execution_plan.md  README.md  agent_batch_database_handoff.md  agent_first_routing_design.md  batch_system_architecture_plan.md  plan-2026-05-18.md  product_blueprint_resume_screening.md  resume_review_product_flow.drawio  resume_review_product_roadmap.md  resume_review_scoring_and_presentation_design.md
docs/strategy/: current_execution_focus.md
docs/suggestions/: 2026-05-19-architecture-review-baseline.md  2026-05-19-daily-plan-completion-review.md  2026-05-19-day2-completion-review.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.mjs
frontend/src/: config.ts  (+1 more)
scripts/: start_desktop.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+96 files in other folders)
