[project]
name = "auditx-veridoc"
version = "0.1.0"
description = "High-certainty desktop document audit application with FastAPI backend and Tauri sidecar architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.8.0",
    "paddlepaddle==3.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "backend"
